# Hik

./: .gitignore  README.md  hik.cabal
app/: Main.hs
configurations/: config.txt  config_template.txt
src/: Actions.hs  Bot.hs  Types.hs
