name:                hik
version:             0.1.0.0
synopsis:            Simple irc bot
description:         Please see README.md
homepage:            https://github.com/weeezes/Hik
license:             Apache-2.0
license-file:        LICENSE
author:              weeezes
maintainer:          weeezes@gmail.com
copyright:           2016 weeezes
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot,
                       Actions,
                       Types
  build-depends:       base >= 4.7 && < 5,
                       network == 2.6.2.1,
                       network-uri >= 2.6,
                       text == 1.2.2.0
  default-language:    Haskell2010

executable hik-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hik
                     , ConfigFile == 1.1.4
                     , MissingH == 1.3.0.1
                     , mtl == 2.2.1
  default-language:    Haskell2010

test-suite hik-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hik
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/weeezes/Hik
